Tue Nov  8 01:42:13 1994  Theodore Y. Ts'o  (tytso@dcl)

	* commands.c (EncryptList): Fix spelling typo.

Mon Nov  7 22:40:17 1994  Theodore Y. Ts'o  (tytso@dcl)

	* commands.c (auth_cmd, encrypt_cmd): Print an error message if
		there are no arguments to "auth" or "encrypt", instead of
		core dumping.

	* commands.c (auth_enable, auth_disable): Change prototypes of
		these routines to be a char *.

Mon Oct  3 13:28:04 1994  Theodore Y. Ts'o  (tytso@dcl)

	* externs.h: The proper place to look for termios.h is
		<termios.h>, not <sys/termios.h>. 

Thu Sep 29 22:51:39 1994  Theodore Y. Ts'o  (tytso@dcl)

	* Makefile.in: Relink executables if libraries change

Tue Aug 16 18:07:54 1994  Mark Eichin  (eichin@cygnus.com)

	* externs.h: don't hide termdata under defined(unix).
	* commands.c: ditto.

Tue Aug 16 18:00:48 1994  Mark Eichin  (eichin@cygnus.com)

	* configure.in: use AC_VFORK (runtime test -- consider just using
	fork instead.)
	* commands.c: check HAVE_VFORK_H.

Tue Aug  9 04:02:28 1994  Mark Eichin  (eichin@tess-turbo)

	* configure.in: test for -lsocket, -lnsl, POSIX_SIGNALS
	* sys_bsd.c: use POSIX_SIGNALS.
	* commands.c: don't use Berzerkely-style string functions.

Sat Aug  6 18:05:42 1994  Mark Eichin  (eichin@cygnus.com)

	* commands.c: in_systm.h is *not* broken on linux with 4.5 libc.

Thu Aug  4 03:36:59 1994  Tom Yu  (tlyu@dragons-lair)

	* Makefile.in:
	* configure.in: make install fixes

Wed Jul 27 22:49:18 1994  Tom Yu  (tlyu@dragons-lair)

	* configure.in: add check for dbm libs

	* commands.c: linux in_system.h (note "e") is broken

Tue Jul 26 18:22:00 1994  Tom Yu  (tlyu@dragons-lair)

	* Makefile.in: forgot some $(srcdir) stuff
